# EITI-ESO

./: .clang-format  CMakeLists.txt
les1/: les1.md  les1_1.c  les1_2.c  les1_2.h  les1_3.c
les2/: les2.md  les2_2.c  les2_3.c  les2_3.h
les2/les2_1/: main.c  main.h  math.c  math.h
les3/: les3_1.c
les3/les3_2/: input.c  input.h  macro.h  main.c  rectangle.c  rectangle.h
les3/les3_3/: .clangd  CMakeLists.txt
les3/les3_3/main/: CMakeLists.txt  les3_3.c
les4/: les4_1.c  les4_2.c  les4_3.c
les5/les5_1/: main.c  stack.c  stack.h  teststack.c  teststack.h
les5/les5_2/MenuAdvanced/: MenuAdvanced.c
les5/les5_2/MenuMoreAdvanced/: MenuMoreAdvanced.c  MenuMoreAdvanced.h
les5/les5_2/MenuSimple/: MenuSimple.c
